# drivn-contracts

./: README.md  Todo.md  conf  package-lock.json
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py  settings.py
backend/app/config/: __init__.py
backend/app/models/: earn_nft_model.py  nft_metadata_model.py
backend/app/route/: r.py
backend/app/routers/: nft_metadata.py
backend/app/services/: nft_service.py
backend/app/services/ABI/: BurnNftAbi.js  EarnNftAbi.js
blockchain/: README.md  hardhat.config.js  package.json
blockchain/.openzeppelin/: polygon-mumbai.json  unknown-31337.json
blockchain/contracts/: DRVN.sol  GTT.sol
blockchain/contracts/BurnNft/: BurnNFT.sol  BurnNFTManagement.sol  IBurnNFT.sol
blockchain/contracts/DRVN/: DRVN.sol  DRVNGovernor.sol  (+6 more)
blockchain/scripts/: deploy-burnnft-manager-testnet.js  deploy-burnnft-test.js  deploy-drvn-governor.js  deploy-drvn-liquidity-test.js  deploy-drvn-test.js  deploy-drvnteam-manager-test.js  deploy-earnnft-manager-testnet.js  deploy-earnnft-test.js  deploy-gtt-test.js  deploy-oracle-chainlink.js  deploy-presale-test.js  deploy-private-sales-test.js  verify-deployed-team-vesting-test.js
blockchain/test/: BurnNFT.js  DRVN.js  EarnNFT.js  GTT.js  PreSales.js  PrivateSales.js  PublicSales.js
contracts/: DRVN.sol  DRVNTeamManager.sol  DRVNVesting.sol  GTT.sol
contracts/DRVNEarnNFT/: DRVNEarnNFT.sol
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
test/: DRVN.js  EarnNFT.js  GTT.js
(+40 files in other folders)
