[tool.poetry]
name = "nft-metadata-backend"
version = "0.1.0"
description = "nft metadata backend service"
authors = ["Giorgi Baghdavadze"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
sentry-sdk = "^1.5.8"
boto3 = "^1.21.36"
strawberry-graphql = "^0.105.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
pandas = "^1.4.0"
web3 = "^5.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
